--- a/index.ipynb
+++ b/index.ipynb
@@ -106,20 +106,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-a519a2b220d2>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-a519a2b220d2>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    greenville_area = greenville['Area']None\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "greenville_area = greenville['Area']N\n",
+    "greenville_area = greenville['Area']\n",
     "greenville_area # 68"
    ]
   },
@@ -136,7 +138,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "city_keys = None\n",
+    "city_keys = greenville\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
